# ChangeLog for sys-apps/collectl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/collectl/ChangeLog,v 1.20 2014/08/27 18:15:30 ryao Exp $

  27 Aug 2014; Richard Yao <ryao@gentoo.org> collectl-3.7.3.ebuild:
  Stabilize sys-apps/collectl-3.7.3: Okay by WilliamH; bugzilla down, so no bug
  number

*collectl-3.7.3 (28 May 2014)

  28 May 2014; Lars Wendler <polynomial-c@gentoo.org> -collectl-3.6.0.ebuild,
  -collectl-3.6.1.ebuild, -collectl-3.6.5.ebuild, +collectl-3.7.3.ebuild,
  +files/collectl.initd-2:
  Version bump. Removed old. Added rewritten init script.

*collectl-3.6.9 (20 Oct 2013)

  20 Oct 2013; Tony Vroon <chainsaw@gentoo.org> +collectl-3.6.9.ebuild:
  Version bump, as requested by Agostino "ago" Sarubbo in bug #466878. This
  adds several new switches; intermediate versions had significant regressions
  and are thus skipped.

*collectl-3.6.5 (06 Jan 2013)

  06 Jan 2013; Mike Frysinger <vapier@gentoo.org> +collectl-3.6.5.ebuild:
  Version bump #450580 by Agostino Sarubbo.

  23 Feb 2012; Tim Harder <radhermit@gentoo.org> collectl-3.6.0.ebuild,
  collectl-3.6.1.ebuild:
  Shorten description to make repoman happy.

  23 Feb 2012; Tim Harder <radhermit@gentoo.org>
  -files/collectl-3.4.0-install.patch, -files/collectl-3.4.1-install.patch,
  -collectl-3.4.2.ebuild, -collectl-3.5.1.ebuild:
  Remove old.

*collectl-3.6.1 (23 Feb 2012)

  23 Feb 2012; Tim Harder <radhermit@gentoo.org> +collectl-3.6.1.ebuild:
  Version bump.

*collectl-3.6.0 (28 Oct 2011)

  28 Oct 2011; Tim Harder <radhermit@gentoo.org> +collectl-3.6.0.ebuild:
  Version bump.

*collectl-3.5.1 (15 Jun 2011)

  15 Jun 2011; Jeroen Roovers <jer@gentoo.org> -collectl-3.4.0.ebuild,
  -collectl-3.4.1.ebuild, +collectl-3.5.1.ebuild:
  Version bump.

*collectl-3.4.2 (21 Jul 2010)

  21 Jul 2010; Mike Frysinger <vapier@gentoo.org> +collectl-3.4.2.ebuild:
  Version bump.

*collectl-3.4.1 (17 Jul 2010)
