@@ -6,5 +6,5 @@ KEYWORDS=~alpha ~amd64 ~ia64 ~x86
 LICENSE=GPL-2 Artistic
 RDEPEND=>=dev-lang/perl-5.8.8 virtual/perl-Time-HiRes >=dev-perl/Archive-Zip-1.20 sys-apps/ethtool sys-apps/pciutils
 SLOT=0
-SRC_URI=mirror://sourceforge/collectl/collectl-3.6.9.src.tar.gz
-_md5_=b9c4758726eafc7d8788fb145f211379
+SRC_URI=mirror://sourceforge/collectl/collectl-3.7.4.src.tar.gz
+_md5_=3de0d6327a43a68eb688ea6196a1a40e
