@@ -1,28 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX collectl.initd 649 SHA256 1abc161c4149c77386586939dcb92d1e488b4d2b44c0a665f5ef6b46f993c3f6 SHA512 31e14d22d6da306759eb11ac6ee12ab058ab511070bcce2fac349751e26b1785ae554b829937fae705d65ffc64e9cb2b386f5eaaaabcf8c8b99fa17b59cc5c20 WHIRLPOOL 0bff1c65e1cda5846b6a5f82d4ac9d68dc80eeeb537a2cc20dd916ec955cecdc763bbcb8cb58ed2c1ecebbe7a9488af2c8292eb771c779d379851844ba9641f9
 AUX collectl.initd-2 468 SHA256 817a1861aeae78cd82f38d48069957638ee3ba7a36f4833d672ecb17a11e9b4f SHA512 bd92b82205b82967819471c2c31217239ebb52b779d88f976508d730878bc3fffbca2aa2867006cb23834fe209541ddfa75e70e2437bf936b01d8ca5bac71531 WHIRLPOOL 5ee7a97a279d3f0b7723024e4b09057438b6ccedc0501492ca861132976d976b24f35a8835941de2a9d6e535fcaa1b68318fb7b4c79979ad5ab2ad631c439e4f
-DIST collectl-3.6.9.src.tar.gz 467637 SHA256 710b968f5fcc1012aae5ecd54114b3c8022fd0ebc6203ac312fa3efe34d08f26 SHA512 6c03a746b439a25a41a37eb8b37cd4e815a600471f4ad0d3a610e1631f23109725fdcba991b22458174e952aeaf7059f2abe13b18754eaff2f96e5c600d4ec63 WHIRLPOOL a884060e59364df701a8d3802639f7adc00acb59be5b666d77b30e505ae94f63fe6f579169e1447c4260e21b58db8823f64f4bdd5d0e7d51561e2f4c3af17602
 DIST collectl-3.7.3.src.tar.gz 457208 SHA256 93c6c130eb89f0ecba1b1b791e80b7e6746fa82f6c4e770feb486ac8fcc53683 SHA512 4e73fc090685933b89c595b3f9f837c28bfbe1d5c3e7ffb5310db309d529779b106dac4f33f337d8b6686175bf7b4ff5af32cbb15b6469517d6e1ddecb6f34f8 WHIRLPOOL f457bbadd556e2372337f78354d0044773989c5914312b80936040494024f367db471e1d735d9cd72bca18611819dd8062b1f24244b8b002c7a035274c1a8772
-EBUILD collectl-3.6.9.ebuild 973 SHA256 7bbbd557d0a114c5bbec03e173d25bfd2dbcd91916166933eebc4b96584f2dd1 SHA512 0d54ed2ed6c170fe8f94e4019b28b6f1c751101f6eebf1c055b781042cac438dcf45c8906765e7cbe271a0e8613a2f02a1f43db311803d13f061fb06decfecb5 WHIRLPOOL d905a1106f3b17815ab4f5134a553ba6917a9a9801f1b6d7235628654e6161d3ff89cb5c1d723e90d4484e366d37d5acaad4a225157bb1f6cf04fbfddb293777
+DIST collectl-3.7.4.src.tar.gz 462752 SHA256 798657b8e3626e9e4ed6fe5ae44b8216da49f0bc4bbda52217d2a304e3d7e108 SHA512 f25686fe977e0a3ea45a1980eea87baaa92a2d81ec308838c137d181e2bf182df6cdf453c5c6e7f3f0b2ccd3066d17ab9c4137303b587f55303dd4afe7ae35da WHIRLPOOL e017e293348644d922547bc99904e5434c0286b8b332509cb062ac92c6a11ff8af2a4ceb275fe82dd9dda11c7774ab9e2e344c9ca5a2d6d25b036a3dab893db0
 EBUILD collectl-3.7.3.ebuild 967 SHA256 e5cc67f901d3142ffd132ae5d91ee53a6f3bb3b481610491bbab69dd27d24575 SHA512 fdc94ea94a102923d2ecb516248101addab9cac9e38ec6bc939e2435c34256908d1d05a787c1baa188b72c2e81b677f31968c9c6d8f8ceffdb117a974c8ed706 WHIRLPOOL 5d45bec7103e74cc4d0f5405a161047170a7f8792d55b88ffd5d10ced473bb37b5ce38060171aa2898137050dfee4141e099836070905e8d16d464f3f93750a2
-MISC ChangeLog 3327 SHA256 8e6f3f38a57f9dedeba13340e525412e67e254597700a1bfbbd4873ac10a8f6e SHA512 aec1c6e7900de15efdcf3d3933473085f410a86bf606dc1837e5c7c078973c53f83c9966aeac670a11ba64683a184b39ad12790e63534ba15269cbe6659dfcee WHIRLPOOL c7aaf41520ed3caba3b3413db845f4d40b93f5a56d18c002e1344cb3600ce34b56c5e220794a4eb7ed74d36f4968c2a5e85b807808150f13047284770adb4963
+EBUILD collectl-3.7.4.ebuild 1021 SHA256 2355d78322e4f5931783956db8a14b01723ce0124bc214ce8da95bef0439f8ee SHA512 0e31e3e6032063cceed3fb160d604975d079c120f669225a75ffbd740a37e61201ce23e7c05dd774ec821f46a7fd34df75384edb4e895278873d68d9e6ea8621 WHIRLPOOL feed1733713a3ad251329e61e45fa4a386d9bf3e2a2bc1501346ddd7714005351856861a15462b91696c0faa3bbbc70ca15affbb0eb9613e2553e9dfeaa30399
+MISC ChangeLog 3523 SHA256 46d75f96f5945a0e0489e66e6caa39b5ca2c62bcd06bfa9e333a9246e4134dc5 SHA512 d2a09f8a831ccb62d71ed1932e7169069a1d3ae222ca7171f56c4f15218cbefa32549f45245a185e82a0f1850b78f6af26221a9aebaff9f63c774d643520aecc WHIRLPOOL a1a2d0571558c75d4fa7bb44f733cd16478cd36f1b0174954cb093bfb12a74772c66813688caa4b05dd7e8af70f735fac34d1c34a587aeb5398c6e6da4fcc8b5
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT/iBGAAoJECDuEZm+6Exkjp8P/1VNIC7e0FN+DW0JzRz40fqc
-hnToaxBCDcm9mnUBFZIBtUj5H6B9+l1lN4L1yzE5wn+3g9EXqeyayU+PokiqVdce
-iMlYBRPRDAAEAmFGdCMfWPaCOPFlX9DMyx9yZPrQdg14du0JCVUiGZ1Ku62btuBy
-EECx6vtubw/MH4xJ7uvlaOQl/E4U3ZG9YE9Y3suvwu2m81T32F188X1BkyUw2RZW
-6VKrE+3kwA80dWKlFsMtBj2I9dkkou1p0pJ/DwAjdZbA8tT5jKIM3TWr4H8wKQc2
-wBFKRWTmpRjxwHTEGsqhN7yjT0i5XIFintARvD5Gcu+Jy0pZvkeAPs3Y+ggzyMIm
-7jl4PAdikhO6Fd3oIfftkgml5f47y7yKkPHjnGwtkluK2f5qjWNtanvifIUrdvU8
-ahvG4B6B6z1T4u94VlYVWKaBkzVwiWc/CHky5enz8URTgDqbaQz6N+8JQpNgVVxA
-E+Mxt5facN/ZbcORIJ9um+kS8WLdBSgVHTwugeEO77f1/ingckrYoASytnR5R+7h
-M+MlofEM42WIUCXUGHgSDkVbPqXVpoYfMLwAh9sL7yE9KnqftjnrWaMJ48620UPN
-8KS0HIY31Ooe7L8czCTCYl47l4jXW1f9qK/eBAKk3nzvn6wX/KESn053iZjIZyW+
-5q6pfTsqCmT0qO8y35Hf
-=no48
+iQIcBAEBCAAGBQJUFoYnAAoJEPiazRVxLXTFAMgQAKAgGuuTvIWiGcg3u5sYjawA
+/9Qdq1yeZ4bpLQ/0PCNmr9QnFD4Pd8ho0+yiHJRPjpQDI+Elpmo+VaB/2TIfwHPj
+35fb/t7eb+zUpjS51Pbevug8X72bOBNIujO70idvy9u2Le+BtmXXaYddyHNRcAF9
+FC6tTG631ivFxJWf6o7v/HPungoV7bZvlAWmOO/fRpZhGg40VW2t1PwKXc1Q5hvU
+9laErVP8byUhy1oWIkZ48aKqCBhom6vkQO9e6YUDXyQIp7G+fQbnhAzeb2Ki7T3w
++J6eWlwnzmy7vGhTUlH2Cy9Fy3dEILigW7E+dWflqC1UtnaWOqs0NXnSvz0ya4cP
+3FZp/FUZTbHjrpA8q9DU9RjCY4Iw1FfYpATQ/bSYxjpvVHDSEckQKoZVqdYTDOiD
+fThtnNoDjY+npz2D9M++PnvPiWFVsRdpt2ZS0ACSBgXmXnVXjkcR3UJuorHKRI6K
+WyruoplbEXMThSScDwsNPT6QXmFxNs7TcnhMQRJYEGYgwz7EKf1EIVn0q5y3cxNE
+Rwlw8jJ6iQakwCvObRqkEt/4UwJ3v3VLiWShvm7/+3pbcxA1enA1ZEeVRxHu5UIX
+aBTQkSzIyqvlRZnHpho6H2ygebNk1aXrJzYWFj6HT4WPbzyjoG3eSnyzy5e7alcL
+b1VmFWMVGWnYh3Cf49YB
+=33GH
 -----END PGP SIGNATURE-----
