@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/collectl
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/collectl/ChangeLog,v 1.20 2014/08/27 18:15:30 ryao Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/collectl/ChangeLog,v 1.21 2014/09/15 06:24:38 polynomial-c Exp $
+
+*collectl-3.7.4 (15 Sep 2014)
+
+  15 Sep 2014; Lars Wendler <polynomial-c@gentoo.org> -collectl-3.6.9.ebuild,
+  +collectl-3.7.4.ebuild, -files/collectl.initd:
+  Version bump. Removed old.
 
   27 Aug 2014; Richard Yao <ryao@gentoo.org> collectl-3.7.3.ebuild:
   Stabilize sys-apps/collectl-3.7.3: Okay by WilliamH; bugzilla down, so no bug
